kube/api/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
spec:
  parentRefs:
  - name: api-gateway
  hostnames:
  - a2.serpentard.dopolytech.fr
  rules:
  - backendRefs:
    - name: api
      port: 3000
